--- a/src/RealTimeTranslator.UI/Views/OverlayWindow.xaml
+++ b/src/RealTimeTranslator.UI/Views/OverlayWindow.xaml
@@ -1,6 +1,7 @@
 <Window x:Class="RealTimeTranslator.UI.Views.OverlayWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:converters="clr-namespace:RealTimeTranslator.UI.Converters"
         Title="Subtitle Overlay"
         WindowStyle="None"
         AllowsTransparency="True"
@@ -11,6 +12,7 @@
         ResizeMode="NoResize">
     
     <Window.Resources>
+        <converters:BottomMarginPercentConverter x:Key="BottomMarginPercentConverter"/>
         <Style x:Key="SubtitleTextStyle" TargetType="TextBlock">
             <Setter Property="FontFamily" Value="{Binding FontFamily}"/>
             <Setter Property="FontSize" Value="{Binding FontSize}"/>
@@ -30,11 +32,16 @@
         <!-- 字幕表示エリア（画面下部） -->
         <Border VerticalAlignment="Bottom"
                 HorizontalAlignment="Center"
-                Margin="0,0,0,100"
                 Background="{Binding BackgroundBrush}"
                 CornerRadius="8"
                 Padding="20,10"
                 MaxWidth="1200">
+            <Border.Margin>
+                <MultiBinding Converter="{StaticResource BottomMarginPercentConverter}">
+                    <Binding Path="BottomMarginPercent"/>
+                    <Binding RelativeSource="{RelativeSource AncestorType=Window}" Path="ActualHeight"/>
+                </MultiBinding>
+            </Border.Margin>
             <ItemsControl ItemsSource="{Binding Subtitles}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
