不具合修正

--- a/src/RealTimeTranslator.UI/Views/SettingsWindow.xaml
+++ b/src/RealTimeTranslator.UI/Views/SettingsWindow.xaml
@@ -25,27 +25,19 @@
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
                             <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="低遅延モデル"/>
-                        <TextBox Grid.Row="0" Grid.Column="1"
-                                 Text="{Binding Settings.ASR.FastModelPath, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="言語"/>
+                        <ComboBox Grid.Row="0" Grid.Column="1"
+                                  ItemsSource="{Binding Languages}"
+                                  SelectedItem="{Binding Settings.ASR.Language, UpdateSourceTrigger=PropertyChanged}"/>
 
-                        <TextBlock Grid.Row="1" Grid.Column="0" Text="高精度モデル" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.ASR.AccurateModelPath, UpdateSourceTrigger=PropertyChanged}"/>
-
-                        <TextBlock Grid.Row="2" Grid.Column="0" Text="言語" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.ASR.Language, UpdateSourceTrigger=PropertyChanged}"/>
-
-                        <CheckBox Grid.Row="3" Grid.Column="1" Margin="0,6,0,0"
+                        <CheckBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
                                   Content="Beam Searchを有効化"
                                   IsChecked="{Binding Settings.ASR.UseBeamSearch}"/>
 
-                        <TextBlock Grid.Row="4" Grid.Column="0" Text="Beamサイズ" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="4" Grid.Column="1" Margin="0,6,0,0"
+                        <TextBlock Grid.Row="2" Grid.Column="0" Text="Beamサイズ" Margin="0,6,0,0"/>
+                        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
                                  Text="{Binding Settings.ASR.BeamSize, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox>
@@ -73,8 +65,9 @@
                                   SelectedItem="{Binding Settings.ASR.GPU.Type}"/>
 
                         <TextBlock Grid.Row="2" Grid.Column="0" Text="GPUデバイスID" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.ASR.GPU.DeviceId, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding GpuDeviceIds}"
+                                  Text="{Binding Settings.ASR.GPU.DeviceId, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox>
 
@@ -90,47 +83,20 @@
                             <RowDefinition Height="Auto"/>
                         </Grid.RowDefinitions>
 
-                        <TextBlock Grid.Row="0" Grid.Column="0" Text="モデルパス"/>
-                        <TextBox Grid.Row="0" Grid.Column="1"
-                                 Text="{Binding Settings.Translation.ModelPath, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBlock Grid.Row="0" Grid.Column="0" Text="ソース言語"/>
+                        <ComboBox Grid.Row="0" Grid.Column="1"
+                                  ItemsSource="{Binding Languages}"
+                                  SelectedItem="{Binding Settings.Translation.SourceLanguage, UpdateSourceTrigger=PropertyChanged}"/>
 
-                        <TextBlock Grid.Row="1" Grid.Column="0" Text="ソース言語" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Translation.SourceLanguage, UpdateSourceTrigger=PropertyChanged}"/>
+                        <TextBlock Grid.Row="1" Grid.Column="0" Text="ターゲット言語" Margin="0,6,0,0"/>
+                        <ComboBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding Languages}"
+                                  SelectedItem="{Binding Settings.Translation.TargetLanguage, UpdateSourceTrigger=PropertyChanged}"/>
 
-                        <TextBlock Grid.Row="2" Grid.Column="0" Text="ターゲット言語" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Translation.TargetLanguage, UpdateSourceTrigger=PropertyChanged}"/>
-
-                        <TextBlock Grid.Row="3" Grid.Column="0" Text="キャッシュサイズ" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="3" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Translation.CacheSize, UpdateSourceTrigger=PropertyChanged}"/>
-                    </Grid>
-                </GroupBox>
-
-                <GroupBox Header="更新設定" Padding="10" Margin="0,0,0,10">
-                    <Grid>
-                        <Grid.ColumnDefinitions>
-                            <ColumnDefinition Width="160"/>
-                            <ColumnDefinition Width="*"/>
-                        </Grid.ColumnDefinitions>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                            <RowDefinition Height="Auto"/>
-                        </Grid.RowDefinitions>
-
-                        <CheckBox Grid.Row="0" Grid.Column="1"
-                                  Content="更新を有効化"
-                                  IsChecked="{Binding Settings.Update.Enabled}"/>
-
-                        <TextBlock Grid.Row="1" Grid.Column="0" Text="フィードURL" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Update.FeedUrl, UpdateSourceTrigger=PropertyChanged}"/>
-
-                        <CheckBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
-                                  Content="更新を自動適用"
-                                  IsChecked="{Binding Settings.Update.AutoApply}"/>
+                        <TextBlock Grid.Row="2" Grid.Column="0" Text="キャッシュサイズ" Margin="0,6,0,0"/>
+                        <ComboBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding CacheSizes}"
+                                  SelectedItem="{Binding Settings.Translation.CacheSize, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox>
 
@@ -226,12 +192,14 @@
                         </Grid.RowDefinitions>
 
                         <TextBlock Grid.Row="0" Grid.Column="0" Text="フォント"/>
-                        <TextBox Grid.Row="0" Grid.Column="1"
-                                 Text="{Binding Settings.Overlay.FontFamily, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="0" Grid.Column="1"
+                                  ItemsSource="{Binding FontFamilies}"
+                                  Text="{Binding Settings.Overlay.FontFamily, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="1" Grid.Column="0" Text="フォントサイズ" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Overlay.FontSize, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding FontSizes}"
+                                  SelectedItem="{Binding Settings.Overlay.FontSize, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="2" Grid.Column="0" Text="仮字幕色" Margin="0,6,0,0"/>
                         <TextBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
@@ -246,20 +214,24 @@
                                  Text="{Binding Settings.Overlay.BackgroundColor, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="5" Grid.Column="0" Text="表示時間(秒)" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="5" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Overlay.DisplayDuration, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="5" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding DisplayDurations}"
+                                  SelectedItem="{Binding Settings.Overlay.DisplayDuration, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="6" Grid.Column="0" Text="フェードアウト時間(秒)" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="6" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Overlay.FadeOutDuration, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="6" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding FadeOutDurations}"
+                                  SelectedItem="{Binding Settings.Overlay.FadeOutDuration, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="7" Grid.Column="0" Text="下部マージン(%)" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="7" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Overlay.BottomMarginPercent, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="7" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding BottomMarginPercents}"
+                                  SelectedItem="{Binding Settings.Overlay.BottomMarginPercent, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="8" Grid.Column="0" Text="最大行数" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="8" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.Overlay.MaxLines, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="8" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding MaxLines}"
+                                  SelectedItem="{Binding Settings.Overlay.MaxLines, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox>
 
@@ -278,24 +250,29 @@
                         </Grid.RowDefinitions>
 
                         <TextBlock Grid.Row="0" Grid.Column="0" Text="サンプルレート"/>
-                        <TextBox Grid.Row="0" Grid.Column="1"
-                                 Text="{Binding Settings.AudioCapture.SampleRate, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="0" Grid.Column="1"
+                                  ItemsSource="{Binding SampleRates}"
+                                  SelectedItem="{Binding Settings.AudioCapture.SampleRate, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="1" Grid.Column="0" Text="VAD感度" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.AudioCapture.VADSensitivity, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="1" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding VADSensitivities}"
+                                  SelectedItem="{Binding Settings.AudioCapture.VADSensitivity, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="2" Grid.Column="0" Text="最小発話長(秒)" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.AudioCapture.MinSpeechDuration, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="2" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding SpeechDurations}"
+                                  SelectedItem="{Binding Settings.AudioCapture.MinSpeechDuration, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="3" Grid.Column="0" Text="最大発話長(秒)" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="3" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.AudioCapture.MaxSpeechDuration, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="3" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding SpeechDurations}"
+                                  SelectedItem="{Binding Settings.AudioCapture.MaxSpeechDuration, UpdateSourceTrigger=PropertyChanged}"/>
 
                         <TextBlock Grid.Row="4" Grid.Column="0" Text="無音判定閾値(秒)" Margin="0,6,0,0"/>
-                        <TextBox Grid.Row="4" Grid.Column="1" Margin="0,6,0,0"
-                                 Text="{Binding Settings.AudioCapture.SilenceThreshold, UpdateSourceTrigger=PropertyChanged}"/>
+                        <ComboBox Grid.Row="4" Grid.Column="1" Margin="0,6,0,0"
+                                  ItemsSource="{Binding SilenceThresholds}"
+                                  SelectedItem="{Binding Settings.AudioCapture.SilenceThreshold, UpdateSourceTrigger=PropertyChanged}"/>
                     </Grid>
                 </GroupBox>
             </StackPanel>
