--- a/src/RealTimeTranslator.UI/Views/OverlayWindow.xaml
+++ b/src/RealTimeTranslator.UI/Views/OverlayWindow.xaml
@@ -2,6 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:converters="clr-namespace:RealTimeTranslator.UI.Converters"
+        xmlns:controls="clr-namespace:RealTimeTranslator.UI.Controls"
         Title="Subtitle Overlay"
         WindowStyle="None"
         AllowsTransparency="True"
@@ -13,7 +14,7 @@
     
     <Window.Resources>
         <converters:BottomMarginPercentConverter x:Key="BottomMarginPercentConverter"/>
-        <Style x:Key="SubtitleTextStyle" TargetType="TextBlock">
+        <Style x:Key="SubtitleTextStyle" TargetType="controls:OutlinedTextBlock">
             <Setter Property="FontFamily" Value="{Binding FontFamily}"/>
             <Setter Property="FontSize" Value="{Binding FontSize}"/>
             <Setter Property="TextWrapping" Value="Wrap"/>
@@ -45,16 +46,12 @@
             <ItemsControl ItemsSource="{Binding Subtitles}">
                 <ItemsControl.ItemTemplate>
                     <DataTemplate>
-                        <TextBlock Text="{Binding DisplayText}"
-                                   Style="{StaticResource SubtitleTextStyle}"
-                                   Foreground="{Binding TextBrush}">
-                            <TextBlock.Effect>
-                                <DropShadowEffect Color="Black" 
-                                                BlurRadius="4" 
-                                                ShadowDepth="2"
-                                                Opacity="0.8"/>
-                            </TextBlock.Effect>
-                        </TextBlock>
+                        <controls:OutlinedTextBlock Text="{Binding DisplayText}"
+                                                    Style="{StaticResource SubtitleTextStyle}"
+                                                    Fill="{Binding TextBrush}"
+                                                    Stroke="{Binding StrokeBrush}"
+                                                    StrokeThickness="{Binding StrokeThickness}"
+                                                    Opacity="{Binding Opacity}"/>
                     </DataTemplate>
                 </ItemsControl.ItemTemplate>
             </ItemsControl>
